--- a/app/views/expedients/index.html.erb
+++ b/app/views/expedients/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p> -->
 
 <%= link_to '[:: Nuevo expediente ::]', new_expedient_path %>
 
