--- a/app/views/expedients/show.html.erb
+++ b/app/views/expedients/show.html.erb
@@ -1,176 +1,4 @@
-<!-- <p id="notice"> <%#= notice %> </p> -->
-<p></p>
-
-<p>
-  <strong>Expediente creado el:</strong>:
-  <%= @expedient.created_at  %>
-</p>
-
-<p><strong>Última modificación</strong>
-  <%= @expedient.updated_at  %>
-</p>
-
-<p>--------------</p>
-
-<p>
-  <strong>Numero:</strong>
-  <%= @expedient.numero %>
-</p>
-
-<p>
-  <strong>Caratula:</strong>
-  <%= @expedient.caratula %>
-</p>
-
-<p>
-  <strong>Actor:</strong>
-  <%= @expedient.actor %>
-</p>
-
-<p>--------------</p>
-
-<p>
-  <strong>Demandado:</strong>
-  <%= @expedient.demandado %>
-</p>
-
-<p>
-  <strong>Abogado:</strong>
-  <%= @expedient.abogado %>
-</p>
-
-<p>
-  <strong>Telefono abogado:</strong>
-  <%= @expedient.telefono_abogado %>
-</p>
-
-<p>
-  <strong>Email abogado:</strong>
-  <%= @expedient.email_abogado %>
-</p>
-
-<p>--------------</p>
-
-<p>
-  <strong>Perito medico:</strong>
-  <%= @expedient.perito_medico %>
-</p>
-
-<p>
-  <strong>Perito medico email:</strong>
-  <%= @expedient.perito_medico_email %>
-</p>
-
-<p>
-  <strong>Perito medico telefono:</strong>
-  <%= @expedient.perito_medico_telefono %>
-</p>
-
-<p>
-  <strong>Perito medico incapacidad:</strong>
-  <%= @expedient.perito_medico_incapacidad %>
-</p>
-
-<p>--------------</p>
-
-<p>
-  <strong>Perito psicologico:</strong>
-  <%= @expedient.perito_psicologico %>
-</p>
-
-<p>
-  <strong>Perito psicologico email:</strong>
-  <%= @expedient.perito_psicologico_email %>
-</p>
-
-<p>
-  <strong>Perito psicologico telefono:</strong>
-  <%= @expedient.perito_psicologico_telefono %>
-</p>
-
-<p>
-  <strong>Perito psicologico incapacidad:</strong>
-  <%= @expedient.perito_psicologico_incapacidad %>
-</p>
-
-<p>--------------</p>
-
-<p>
-  <strong>Perito contable:</strong>
-  <%= @expedient.perito_contable %>
-</p>
-
-<p>
-  <strong>Perito contable email:</strong>
-  <%= @expedient.perito_contable_email %>
-</p>
-
-<p>
-  <strong>Perito contable telefono:</strong>
-  <%= @expedient.perito_contable_telefono %>
-</p>
-
-<p>
-  <strong>Perito contable incapacidad:</strong>
-  <%= @expedient.perito_contable_incapacidad %>
-</p>
-
-<p>--------------</p>
-
-<p>
-  <strong>Ibm:</strong>
-  <%= @expedient.ibm %>
-</p>
-
-<p>
-  <strong>Indenmizacion:</strong>
-  <%= @expedient.indenmizacion %>
-</p>
-
-
-<p>--------------</p>
-
-
-<div class="row">
-  <div class="col-md-5 col-xs-5">
-    <strong>Novedad</strong>
-  </div>
-
-  <div class="col-md-3 col-xs-7">
-    <strong>Actualizada</strong>
-  </div>
-
-  <div class="clearfix visible-sm"></div>
-
-  <div class="col-md-2 col-xs-5">
-  </div>
-
-  <div class="col-md-5 col-xs-7">
-  </div>
-</div>
-
-<% @updates.each do |update| %>
-  <div class="row">
-    <div class="col-md-5 col-xs-5">
-      <%= update.novedad %>
-    </div>
-
-    <div class="col-md-2 col-xs-7">
-      <%= update.updated_at %>
-    </div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-3 col-xs-5">
-    </div>
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-  </div>
-<% end %>
-
-    <p>--------------</p>
+<p id="notice"> <%#= notice %> </p>
 
 <br />
-<%= link_to 'Editar', edit_expedient_path(@expedient) %> |
-<%= link_to 'Volver', expedients_path %>
+<%= link_to '[:: Editar ', edit_expedient_path(@expedient) %> | <%= link_to ' Listado de expedientes ::]', expedients_path %>
