--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -6,5 +6,8 @@
   <li><%= link_to t('botonera.signout'), destroy_user_session_path, :method=>'delete' %></li>
 <% else %>
   <li><%= link_to t('botonera.signin'), new_user_session_path %></li>
-  <li><%= link_to t('botonera.signup'), new_user_registration_path %></li>
+  <li>
+    <%#= link_to t('botonera.signup'), new_user_registration_path %>
+    <%= link_to t('botonera.signup'), '#' %>
+  </li>
 <% end %>
