--- a/app/views/updates/edit.html.erb
+++ b/app/views/updates/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Update</h1>
+<h1>Actualizando novedad</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @update %> |
-<%= link_to 'Back', updates_path %>
+<%= link_to 'Mostrar', @update %> |
+<%= link_to 'Volver', expedients_path %>
