--- a/app/views/updates/show.html.erb
+++ b/app/views/updates/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Expedient:</strong>
+  <strong>Expediente:</strong>
   <%= @update.expedient_id %>
 </p>
 
@@ -10,5 +10,5 @@
   <%= @update.novedad %>
 </p>
 
-<%= link_to 'Edit', edit_update_path(@update) %> |
-<%= link_to 'Back', updates_path %>
+<%= link_to 'Actualizar', edit_update_path(@update) %> |
+<%= link_to 'Volver', expedients_path %>
