--- a/app/views/updates/_form.html.erb
+++ b/app/views/updates/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :novedad %><br>
-    <%= f.text_area :novedad %>
+    <%= f.text_area :novedad, cols: "90", rows: "4" %>
   </div>
   <div class="actions">
     <%= f.submit %>
